<resources>
    <string name="app_name">TwitterGram</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>

    <string name="closebutton">Close Button for Activity</string>
    <string name="signUp">SingUp</string>
    <string name="email">Email</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="you_didn_t_post_anything">You didn\'t post anything</string>
    <string name="not_found">Not found</string>
</resources>
